<resources>
    <string name="app_name">Anecdote</string>
    <string name="test">test</string>
    <string name="submit">Submit</string>
    <string name="register_here">
        <u>Register here</u>
    </string>
    <string name="empty_check">Empty check</string>
    <string name="email_check">Email check</string>
    <string name="digit_check">Digit check</string>
    <string name="value_check">Value check</string>
    <string name="no_check">No check</string>
    <string name="error_message_empty">Please fill this field</string>
    <string name="error_message_email">Please input a valid email address</string>
    <string name="error_message_digit">Please input digits only</string>
    <string name="error_message_password">Length 6–12 characters. Only letters and numbers allowed.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email Address</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_detail">email detail</string>
    <string name="first_name_detail">first name detail</string>
    <string name="id_detail">id detail</string>
    <string name="last_name_detail">last name detail</string>
    <string name="password_detail">password detail</string>
    <string name="username_detail">username detail</string>
    <string name="placeholder_image">placeholder image</string>
    <string name="category_name">Category Name</string>
    <string name="category_image">Category Image</string>
    <string name="send_to">Share persuasive story via:</string>
    <string name="storyCreateMetaFirst">Create a Story with\nFull Guidance</string>
    <string name="welcomeMessageMetaFirst">OK! It is time to create a <b>persuasive</b> story.
        \nA persuasive story is a story that aims to <b>influence</b>.
        \n\nIn most cases the audience is more persuaded from stories that describe an <b>issue</b> and its <b>potential resolution</b>.
        So when writing your story you should have in mind your <b>audience</b> so you can make the story <b>relatable</b> to them as much as possible.
        This makes the story more influential to them.
        \n\nTalking about influence you should be aiming to <b>change</b> some aspect of your audience\'s personality. This could be
        their <b>knowledge/understanding</b> regarding an issue, their <b>attitude</b> towards it, their <b>intention</b> to do something about it and ultimately a potential positive <b>behaviour</b> relevant to it.
        \n\nIn order for you to make your story more relatable Anecdote will guide you through a series of steps that will help you to tailor your story according to your audience.\n
    </string>
    <string name="categoryMetaFirst">To begin with, select the <b><font color="#B2182D">topic</font></b> in which your story fits. By selecting one of the topics provided (or by suggesting your own), you are directly
        targeting people that are interested to read a relevant story. This will also give you some specific tips later on.</string>
    <string name="stageMetaFirst">\nSecondly, the state that your audience is in greatly affects their perception of your story in general and of your intended message.
        \n\nThe audience typically moves through <b>4 main stages</b> in order to change.  While thinking of the problem or issue your story will be about, select the <b><font color="#128E4A">stage</font></b>
        in which your intended audience would most likely belong in regard to the issue.</string>
    <string name="swipeRightMetaFirst">According to what you have selected, tailored suggestions have been generated for you. You can <b>swipe right</b>
        and get extra information on how to make your story more relatable and thus more persuasive for your audience.
        \n\nSpecific <b>goals and strategies</b>
        are available according to your selections. Your persuasive story will be a combination of these persuasive factors and a narrative that will be structured within them to
        help deliver your message.
        \n\nYou could try to <b>promote an idea</b> to create change and move your audience to action or you can just <b>describe something important to you</b> and why is should matter to them as well.
        Anything goes, from a <b>hero\'s journey</b>, to a story of <b>personal growth</b> that have changed your worldview.
    </string>
    <string name="guidanceMetaFirst">Now think about your audience in relation to the <b><font color="#128E4A">stage</font></b> they are in.
        \n- How can you make the <b>stage goal</b> suggested in the tips section relevant to them?
        \n- Which <b>strategies</b> will more likely work for them?
        \n\nUse the field below to capture your ideas. You will be able to rearrange these later when editing your story.</string>
    <string name="stageRelatedHint">Making the story relatable: stage.</string>
    <string name="guidance2MetaFirst">Think about the <b><font color="#B2182D">topic/theme/area</font></b> of your story.
        \n- Is it relatable to your intended audience?
        \n- How does this affect the setting
        and actors of the story?
        \n\nUse the field below to capture any related ideas. You will be able to rearrange them later when editing your story.</string>
    <string name="contextRelatedHint">Making the story relatable: topic.</string>
    <string name="guidance3MetaFirst">\nProvide some keywords that characterise your story.</string>
    <string name="ifOtherSpecifyMetaFirst">Add story keywords.</string>
    <string name="beforeTitleMetaFirst">Next we will start thinking of the content of the narrative around which our persuasive story is constructed. Each compelling story needs to start somewhere.
        \nGive a <b>title</b> and a <b>short description</b> for your story/idea. You can always change it later.</string>
    <string name="titleMetaFirst">Give the title of your story.</string>
    <string name="storyDescriptionMetaFirst">Quickly summarise your story in one line.</string>
    <string name="beforeOrientationMetaFirst">Now it is time for you to <b>set the scene</b> and give the background for your story. It should be written in a way
        that the audience might find relevant and relatable.
        \n- <b>Who</b> is involved in the story?
        \n- <b>When</b> did the events take place? - <b>Where</b>?
        \n- <b>How</b> were the actors/people in the story feeling and acting?
        \n- <b>Why</b> was the situation like that?
        \n\nThis information will be used to bring your audience close to what you are describing.</string>
    <string name="orientationMetaFirst">Set the scene/background.</string>
    <string name="beforeComplicatedActionMetaFirst">In the next part you will describe what actually happens in the story.
        \nAs mentioned before the audience is more likely to be influenced
        by stories that describe an <b>issue</b> and its <b>potential resolution</b> through the story.
        \n- You could describe a <b>problem/challenge/obstacle/issue</b>
        that your audience, you or someone else you are trying to influence struggles with now or in the past.</string>
    <string name="complicatedActionMetaFirst">What happens in the story? What is the issue?</string>
    <string name="beforeEvaluationMetaFirst">The next part is used for you to describe <b>why you chose to share</b> the story.
        \n- Why do you think it is <b>important/interesting</b>?
        \n- Why are you <b>excited/passionate</b> about it?
        \n- You could describe how the people in the story felt.
        \n- You could also describe a better world where the issue does not exist.
        \n- You could talk about what was difficult, or the steps taken to tackle the issue.</string>
    <string name="evaluationMetaFirst">Why is this interesting/important/exciting?</string>
    <string name="beforeResolutionMetaFirst">Now it is time to describe <b>what finally happened</b> in the story.
        \n- You can write about how the issue was <b>resolved</b> or how the people in their story accomplished their goals.
        \n- Did they succeed or fail? Was there a twist or something unexpected?</string>
    <string name="resolutionMetaFirst">Describe what happened in the end.</string>
    <string name="beforeMessageMetaFirst">The next part is very important for your story to be persuasive. It gives you the opportunity to leave your audience with the
        <b><font color="#8E44AD">meaning or significance</font></b> of what happened.
        \n- You can describe how after the issue has been resolved the world is a better place for the people in the story.
        \n- You could share <b>strategies</b> and give <b>suggestions</b> to your audience and reinforce of <b>why these are relevant</b> to them.
        \n- You could write about how the audience\'s life will improve after following your suggestions along perhaps with how this experience changed you.
        \n- You could <b>give a key takeaway lesson</b> and connect it to your audience\'s lives.
        \n- You could also share <b>scenarios or examples</b> that would nudge your audience
        to apply what they have learned.</string>
    <string name="messageMetaFirst">What should the audience take away?</string>
    <string name="beforeReview">OK! Now we are ready to put all the elements of your persuasive story together.
        \n You can click the generate button to create your persuasive story. You will be able to edit your persuasive story after generating it. You can always come back to this screen to get tips but</string>
    <string name="intro_links_tutorials">Here you can find useful links and video tutorials for persuasive writing.</string>
    <string name="link1">Guide: <a href="https://problogger.com/th-science-of-storytelling-6-ways-to-write-more-persuasive-stories/">6 Ways to Write More Persuasive Stories</a></string>
    <string name="link2">Article: <a href="https://hbr.org/2011/03/using-stories-as-a-tool-of-per">Using Stories to Persuade</a></string>
    <string name="link3">Article: <a href="https://www.hrzone.com/talent/retention/how-to-use-storytelling-to-influence-people">How to use storytelling to influence people</a></string>
    <string name="help_and_support">Contact the developer!</string>
    <string name="help_description">\nIn case you would like to report an issue or require any other kind of assistance please use the button below to contact me at: <b><font color="#d21414">ib322@bath.ac.uk</font></b>.</string>
    <string name="report_a_problem">Send Email</string>
</resources>