<?xml version="1.0" encoding="utf-8"?>
<com.emmasuzuki.easyform.EasyForm
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.jbapplab.navigationdrawertabs.RegisterActivity"
    android:id="@+id/registration_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    app:submitButton="@+id/submit_button"
    app:showErrorOn="unfocus">

    <LinearLayout
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.emmasuzuki.easyform.EasyTextInputLayout
            android:id="@+id/etFirstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/first_name"
            app:errorMessage="@string/error_message_empty"
            app:errorType="empty"/>

        <com.emmasuzuki.easyform.EasyTextInputLayout
            android:id="@+id/etLastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/last_name"
            app:errorMessage="@string/error_message_empty"
            app:errorType="empty"/>
    </LinearLayout>

    <com.emmasuzuki.easyform.EasyTextInputLayout
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_marginTop="8dp"
        android:hint="@string/username"
        app:errorMessage="@string/error_message_empty"
        app:errorType="empty"/>

    <com.emmasuzuki.easyform.EasyTextInputLayout
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etUsername"
        android:layout_marginTop="8dp"
        android:hint="@string/email"
        app:errorMessage="@string/error_message_email"
        app:errorType="pattern"
        app:regexPattern="[a-zA-Z0-9._-]+@[a-z]+\\.+[a-z]+"/>

    <com.emmasuzuki.easyform.EasyTextInputLayout
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEmail"
        android:layout_marginTop="8dp"
        android:hint="@string/password"
        app:errorMessage="@string/error_message_password"
        app:errorType="pattern"
        app:regexPattern="[a-zA-Z0-9]{6,12}" />

    <com.emmasuzuki.easyform.EasyTextInputLayout
        android:id="@+id/etPasswordConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:layout_marginTop="8dp"
        android:hint="@string/confirm_password"
        app:errorMessage="@string/error_message_password"
        app:errorType="pattern"
        app:regexPattern="[a-zA-Z0-9]{6,12}"
        />

    <Button
        android:id="@+id/bRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:background="@color/colorAccent"
        android:text="@string/submit"
        android:textColor="@android:color/white"/>

</com.emmasuzuki.easyform.EasyForm>
