<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HelpActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="@dimen/actionBarElevation"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:logo="@drawable/logo"
        app:contentInsetStartWithNavigation="0dp"
        app:titleMarginStart="15dp"
        app:title="Help" />

    <android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:id="@+id/drawerLayout">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
        <TextView
            android:id="@+id/tv_help_header"
            style="@style/settings_header"
            android:text="@string/help_and_support" />

        <TextView
            android:id="@+id/tv_help_desc"
            style="@style/settings_sub_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/items_inbetween_space"
            android:paddingTop="@dimen/items_top_padding"
            android:text="@string/help_description"/>

        <Button
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:id="@+id/emailButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorAccent"
            android:text="@string/report_a_problem"
            android:textColor="@android:color/white"
            android:padding="10dp"
            android:gravity="center"
            android:layout_gravity="center_horizontal"/>
        </LinearLayout>

        <android.support.design.widget.NavigationView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/navigation_stuff"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:itemIconTint="@color/colorPrimaryDark"
            app:tabSelectedTextColor="@color/colorAccent"
            app:menu="@menu/drawermenu"
            android:layout_marginTop="0dp"
            />
        <!--app:headerLayout="@layout/drawer_header"-->

    </android.support.v4.widget.DrawerLayout>

</LinearLayout>
